2008-08-17  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/changes.py: keep commit log messages as unicode as
	they can well be non-ascii.

2008-08-16  Björn Lindqvist  <bjourne@gmail.com>

	* modulesets/gnome-external-deps-2.24.modules: dbus depends on
	expat. (closes #547184)

2008-08-17  Frederic Peters  <fpeters@0d.be>

	* buildbot/public_html/lgo.css,
	jhbuild/buildbot/status/web/__init__.py,
	jhbuild/buildbot/status/web/changes.py: custom buildbot changes pages,
	linking to GNOME ViewVC.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/scheduler.py: mark updates limited to /po/ files as
	unimportant as it is unlikely they would break the build.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* buildbot/public_html/lgo.css: color up buildbot exceptions and
	running step.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/changes.py: added support for the
	content-transfer-encoding header as it is used in some emails; also
	fixed discovery of last line in translator messages.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/status/web/__init__.py: fixed slave header tooltip
	to report all current builds, not just the first one.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* buildbot/public_html/lgo.css, buildbot/template.html,
	jhbuild/buildbot/status/web/__init__.py,
	jhbuild/buildbot/status/web/waterfall.py: cleaned and improved module
	waterfall pages.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/status/web/__init__.py,
	jhbuild/buildbot/status/web/feeds.py,
	jhbuild/buildbot/status/web/waterfall.py: waterfall customisation to
	only display changes related to the given module; moved waterfall code
	in its own module; renamed feeds module from feeder to feeds.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* buildbot/master.cfg, jhbuild/config.py, jhbuild/defaults.jhbuildrc:
	new jhbuildbot_svn_commits_box for build master to give the path to