@@ -501,15 +501,6 @@
     </dependencies>
   </autotools>
 
-  <tarball id="gtksourceviewmm-1.0" version="0.3.1">
-    <source href="http://ftp.gnome.org/pub/GNOME/sources/libgtksourceviewmm/0.3/libgtksourceviewmm-0.3.1.tar.gz"
-            md5sum="f778768bfbddfb363ae234b19cd0d818" size="568777"/>
-    <dependencies>
-      <dep package="gtksourceview-1.0"/>
-      <dep package="gtkmm"/>
-    </dependencies>
-  </tarball>
-
   <autotools id="goocanvasmm">
     <branch repo="svn.gnomemm" />
     <dependencies>
