@@ -1,5 +1,12 @@
 2008-08-17  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/moduleset.py, modulesets/gnome-2.24.modules: ignore missing
+	modules when constructing the GTK+ module list; also removed module
+	gtksourceviewmm-1.0 as gtksourceview-1.0 has been removed.
+	(closes: #548082)
+
+2008-08-17  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/buildbot/changes.py: keep commit log messages as unicode as
 	they can well be non-ascii.
 
